--- a/Index.html
+++ b/Index.html
@@ -134,7 +134,7 @@
                 </ul>
                 <div class="call-to-action">
                     <a href="https://wa.me/7523805619?text=Hello" target="_blank">Get In touch</a>
-                    <a href="./images/Shivam's Resume.pdf" download>Download Resume</a>
+                    <a href="./images/Shivam's_Resume.pdf" download>Download Resume</a>
                 </div>
             </div>
         </div>
